--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/todosimple
+spring.datasource.url=jdbc:mysql://localhost:3306/todosimple?createDatabaseifNotExists=true
 spring.datasource.username=root
 spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
